Add start and end times, and refactor
Change-Id: Id5a9ef05f9f407f19002eee40c4528268e035f82

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -3,7 +3,14 @@
 
   "meeting-times": "Meeting times",
 
-  "date-label": "Date (UTC)",
+  "dates-label": "Dates (in UTC):",
+  "startdate-label": "Start date:",
+  "starttime-label": "Start time:",
+  "enddate-label": "End date:",
+  "endtime-label": "End time:",
+  "timezones-label": "Timezones to display:",
+  "timezone-label": "Timezone:",
+  "go": "Go",
 
   "dst": "DST",
   "dst-title": "Daylight Saving Time",
